--- a/css/styles.css
+++ b/css/styles.css
@@ -10,13 +10,22 @@
   float: left
 }
 
+.column img {
+  box-sizing: border-box;
+  display: block;
+  padding: 10px;
+
+}
+
 img {
-  border: green;
+  border: 10px  green;
   margin: 10px;
   float: left;
   width:25%;
   height: auto;
   display: block;
+  box-sizing: border-box;
+
 }
 
 .sidebar {
@@ -37,6 +46,13 @@ h3 {
 
 p {
   margin: 30px;
+  padding: 20px;
+  font-family: sans-serif;
+  font-size: medium
 
+}
 
+ol {
+  padding: 10px;
+  margin: 10px;
 }
