--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,12 @@ h3 {
   text-align: center;
 }
 
+h4 {
+  text-align: center;
+  font-style: italic;
+  
+}
+
 p {
   margin: 30px;
   padding: 20px;
