--- a/css/styles.css
+++ b/css/styles.css
@@ -14,14 +14,14 @@
   box-sizing: border-box;
   display: block;
   padding: 10px;
-
+  width: 100%;
 }
 
 img {
   border: 10px  green;
   margin: 10px;
   float: left;
-  width:25%;
+  width:15%;
   height: auto;
   display: block;
   box-sizing: border-box;
@@ -29,7 +29,6 @@ img {
 }
 
 .sidebar {
-  border: 5px black;
   width: 25%;
   float: right;
   padding: 10px;
@@ -61,4 +60,10 @@ p {
 ol {
   padding: 10px;
   margin: 10px;
+}
+
+.eightyfive {
+  margin-left: 15%;
+  margin-right:30%;
+
 }
