--- a/css/styles.css
+++ b/css/styles.css
@@ -12,15 +12,17 @@
 }
 
 .column {
-  width: 33%;
-  float: left
+  width: 30%;
+  float: left;
+  margin: 2px;
 }
 
 .column img {
   box-sizing: border-box;
   display: block;
   padding: 10px;
-  width: 100%;
+  width: 99%;
+  float: left;
 }
 
 
@@ -70,7 +72,7 @@ ol {
 
 .eightyfive {
   margin-left: 15%;
-  margin-right:30%;
+  margin-right: 15%;
 
 }
 
