added finishing touches and fine tuning

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,8 +28,9 @@
 
 
 img {
-  border: 10px  green;
-  margin: 10px;
+  border-radius: 10%;
+  border-width: 1px;
+  margin: 5px;
   float: left;
   width:15%;
   height: auto;
@@ -39,6 +40,10 @@ img {
 }
 
 .sidebar {
+  border-radius: 10%;
+  border-style: groove;
+  border-color: darkorchid;
+  border-width: 5px;
   width: 25%;
   float: right;
   padding: 10px;
@@ -47,10 +52,22 @@ img {
   margin: 10px
 }
 
+h1 {
+  border-radius: 20%;
+  border-style: double;
+  border-color:firebrick;
+  background-color: grey;
+  margin-left: 20%;
+  margin-right: 20%;
+  padding: 10px;
+ 
+}
+
 h3 {
   color: black;
   font-style: italic;
   text-align: center;
+  
 }
 
 h4 {
